# search-workshop-golang

./: .gitignore  Makefile  README.md  config.yaml  docker-compose.yml  go.mod  go.sum
.devcontainer/: Dockerfile  devcontainer.json
cmd/eval/: main.go  metrics_test.go
cmd/prep/: main.go
cmd/searchd/: main.go
internal/catalog/: catalog.go  catalog_test.go  sample.go
internal/config/: config.go
internal/embed/: embed.go
internal/httpapi/: httpapi.go
internal/search/: queries.go  schema.go  service.go
labs/: lab-0.md  lab-1.md  lab-2.md  lab-3.md  lab-4.md  lab-5.md  lab-6.md  lab-7.md  lab-8.md  lab-9.md  verify.sh
optimizer/: pyproject.toml  study.py
web/: index.html  style.css  web.go
web/images/: README.md
web/scripts/: apis.js  script.js
