[project]
name = "workshop-optimizer"
version = "0.1.0"
description = "Redis Retrieval Optimizer search study over the Go-built workshop indexes"
requires-python = ">=3.11,<3.13"
dependencies = [
    "redis-retrieval-optimizer>=0.2.0",
    "sentence-transformers>=3.0.0",
    "pandas>=2.0.0",
]

[tool.uv]
package = false
